# codecov-test

./: README.md  pyproject.toml
.azure-pipelines/: main.yml
.github/workflows/: main.yml
codecov_test/: __init__.py  file.py
tests/: test_file.py
